Change log for Koala HTTP server and Dylan Server Pages


***********************************************************************************

Changes for version 0.3

  New Features:
  - Koala: XML-RPC server added.  See config/koala-config.xml for settings.
           Start the example and use the "ping" and "echo" methods to test.
  - Other: XML-RPC client added.
  - Koala: New config variable 'auto-register'.  See config/koala-config.xml
  - Koala: It is now possible to get the body content of a POST for content-types
           other than application/x-www-form-url-encoded.  See request-content(<request>).
  - Koala: Added the "headers" log level, to show incoming/outgoing headers if desired.
           See config/koala-config.xml

***********************************************************************************

Changes for version 0.2 (released May 7, 2002)
  Bug Fixes:
  - Koala: Several resource pool bugs fixed.
  - Koala: 404 errors reported correctly again.
  - DSP: Tag parameter specs (in the "define tag" macro) now accept default values.
  - DSP: Unrecognized tags handled a bit better during parsing and rendering.

  New Features:
  - Koala: Use koala-config.xml to specify configuration parameters.  No longer
    requires recompilation to change certain settings.
  - DSP: Lots of documentation added.
  - DSP: Template parser gives more warnings for malformed tags.
  - DSP: Improved tags for generating dynamic HTML tables.  <dsp:table> tag et al.
  - DSP: Added new tags for date display and timezone hacking.

  Internals
  - DSP: Moved DSP to its own module.
  - Added an Ant build.xml file to make building new releases more reliable.


***********************************************************************************

Changes for version 0.1 (released Feb 4, 2002)
  - initial version
