@@ -1,0 +1,29 @@
+<html>
+<head>
+  <title>Koala Doc</title>
+
+  <style><!--
+  body        { font-family: Arial,Helvetica,Sans-serif; font-size: 10pt; }
+  blockquote.code { font-family: monospace,courier; }
+  .defname    { font-size: 14pt; font-weight: bold; }
+  .defheader  { font-size: 13pt; font-weight: bold; }
+  .deftype    { font-size: 12pt; font-style: italic; }
+  .deflib     { font-size: 13pt; font-style: normal; }
+  .param      { font-size: 10pt; font-style: italic; }
+  -->
+  </style>
+
+</head>
+
+<body text="#000000" bgcolor="#F0F0FF">
+
+<h1 align="center">Koala Doc</h1>
+
+For now just a few notes...
+
+<p>Probably a good way to see how to write an addition to Koala, is to start
+by looking at xml-rpc-server.dylan
+
+
+</body>
+</html>
